infrastructure/configs/gitea/ingressConfig.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: gitea
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea.lan.vandelocht.uk`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
      middlewares:
        - name: svc-gitea-headers
  tls:
    secretName: gitea-lan-vandelocht-uk-production-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: svc-gitea-headers
  namespace: gitea
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
